# image_outline

./: .gitignore  Cargo.toml  README.md  README.tpl
examples/background_removal/: Cargo.toml
examples/background_removal/src/: main.rs
examples/file-io/: Cargo.toml
examples/file-io/src/: main.rs
examples/text-to-image/: Cargo.toml
examples/text-to-image/src/: main.rs
src/: lib.rs
