[package]
name = "image_outline"
version = "0.1.0"
edition = "2024"
authors = ["Benjamin Massey <benjamin.w.massey@gmail.com>"]
description = "a barebones method for adding outline pixels to an image."
license = "MIT"
repository = "https://github.com/BenjaminMassey/image_outline"
keywords = ["outline", "image", "processing", "styling", "border"]

[dependencies]
image = "0.25.6"

[badges.maintenance]
status = "actively-developed"